LCD/build/log/idf_py_stderr_output_58701
/home/garfield/github/esp32-idf-device/LCD/main/LCD.c: In function 'lcd_draw_char':
/home/garfield/github/esp32-idf-device/LCD/main/LCD.c:25:26: error: 'width' undeclared (first use in this function)
   25 |     lcd_clear_buffer(x,y,width,height,0x0000);
      |                          ^~~~~
/home/garfield/github/esp32-idf-device/LCD/main/LCD.c:25:26: note: each undeclared identifier is reported only once for each function it appears in
/home/garfield/github/esp32-idf-device/LCD/main/LCD.c:25:32: error: 'height' undeclared (first use in this function)
   25 |     lcd_clear_buffer(x,y,width,height,0x0000);
      |                                ^~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:90: esp-idf/main/CMakeFiles/__idf_main.dir/LCD.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:5807: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
